[package]
name = "nicer"
version = "0.1.0"
authors = ["Piotr Zaczkowski <pzaczkowski@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(unix)'.dependencies]
libc = "0.2.x"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.x"

[[bin]]
name = "nice"
